buttons with zero now disabled, switching to new branch

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -1,11 +1,67 @@
-<!--<style type="text/css">
+<style type="text/css">
   li {
     list-style-type: none;
   }
-  a:hover {
+  .my-list li {
+    list-style: none;
+    padding-top: 8px;
+    font-size: 15px;   
+}
+.badge {
+  display: inline-block;
+  min-width: 24px;
+  padding: 3px 13px 3px 13px;
+  font-size: 15px;
+  color: white;
+  line-height: 1;
+  vertical-align: baseline;
+  white-space: nowrap;
+  text-align: center;
+  background-color: #999999;
+  border-radius: 15px;
+}
+.vcenter {
+  display: table-cell;
+  vertical-align: text-top;
+  float: none;
+  font-size: x-large;
+}
+  /*a:hover {
     background-color: gray;
-  }
-</style>-->
+  }*/
+
+  /*.disabledTags{
+  font-size: 10000px;
+  }*/
+
+  /*.better-button{
+
+
+  }*/
+
+  /*.better-button {
+    box-shadow: 0 3px 0 0 #007299;
+    border-radius: 24px;
+}*/
+
+  .better-button-active {
+    background: green;
+    box-shadow: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
+}
+
+  .better-button-disabled {
+    background: red;
+    box-shadow: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
+    pointer-events: none;
+}
+
+
+
+</style>
 
 <header class="header-image">
     <div class="headline">
@@ -40,7 +96,6 @@
           </div>
         </div>
         <br>
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
@@ -48,24 +103,52 @@
         </button>
 
         <div id="tag-bar" class="row collapse jumbotron">
-          <div class="col-md-12 btn-group btn-group-justified" role="group" aria-label="...">
+
+          <!-- <div class="col-md-12" aria-label="..."> -->
+              <!-- <div class="col-md-1"></div> -->
+              <div class="col-md-2 my-list vcenter" ng-repeat="category in categories">
+              {{category.name}}
+                <li ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" >
+                  <button type = "button" ng-click="tagFilter(tag)" ng-class="tag.tag_count == 0 ? 'better-button-disabled' : 'better-button-active'">
+                    {{tag.name}} <span class="badge">{{tag.tag_count}}</span>
+                  </button>
+                </li>
+              </div>
+              <div class="col-md-1"></div>
+
+
+
+              <!-- ng-class="{'better-button': tagFilter(tag) || 'better-button.disabled' == 'somethingelse'}"
+
+              ng-class="tagFilter(tag) ? 'better-button' : 'better-button.disabled'"> -->
+
+
+         <!--  </div> -->
+
+<!--ng-class="{'disabledTags' : tag.tag_count == 0}"
+
+<li ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)"> <button type = "button" class="btn btn-primary" ng-click="tagFilter(tag)"></button><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>-->
+
+
+
+          <!-- <div class="col-md-12 btn-group btn-group-justified" role="group" aria-label="..."> -->
             <!-- <table class = "table"> -->
               <!-- <thead> -->
                 <!-- <tr> -->
-                  <div class="btn-group" role="group" ng-repeat="category in categories">
+                  <!-- <div class="btn-group my-list vcenter" role="group" ng-repeat="category in categories"> -->
                     <!-- <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"> -->
-                    {{category.name}}
+                    <!-- {{category.name}} -->
                 <!-- </tr> -->
               <!-- </thead> -->
                    <!-- <span class="caret"></span>
                   </button> -->
                   <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenu1"> -->
-                    <li ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
+                    <!-- <li ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li> -->
                   <!-- </ul> -->
                 <!-- </table> -->
-            </div>
+            <!-- </div> -->
           </div>
-        </div>
+        
         <br>
         <div class="product-list row" ng-if="isLoading">
           <div class="col-xs-12 center">
@@ -165,3 +248,8 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+
+</div>
