--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -1,59 +1,34 @@
-<div class="welcome">
-  <!-- Full Width Image Header -->
+<div class="welcome">  
+  <header class="banner">
     <div id="particles-js"></div>
-    <header class="header-image">
-        <div class="headline">
-        <div class="col-xs-12">
-          Technology isn't the answer,
-          <br>
-          but it shouldn't be the problem.
-          <!-- <br><br><br> -->
-          <!-- <i class="fa fa-user-md"></i>  -->
-          <!-- <i class="fa fa-line-chart"></i>  -->
-          <!-- <i class="fa fa-university"></i>  -->
-          <!-- <i class="fa fa-tachometer"></i>  -->
-          <!-- <i class="fa fa-graduation-cap"></i>  -->
-          <!-- <i class="fa fa-cloud"></i>  -->
-          <!-- <i class="fa fa-child"></i>  -->
-          <!-- <i class="fa fa-android"></i> -->
-          <!-- <i class="fa fa-leaf"></i>  -->
-          <!-- <i class="fa fa-heartbeat"></i> -->
-          <!-- <i class="fa fa-medkit"></i>  -->
-          <!-- <i class="fa fa-globe"></i>  -->
-          <!-- <i class="fa fa-bar-chart"></i> -->
-          <!-- <i class="fa fa-signal"></i> -->
-          <!-- <i class="fa fa-money"></i>  -->
-          <!-- <i class="fa fa-lightbulb-o"></i> -->
-          <!-- <i class="fa fa-qrcode"></i> -->
-          <!-- <i class="fa fa-wheelchair"></i> -->
-          <!-- <i class="fa fa-apple"></i> -->
-        </div>
-        <div class="logo"></div>   
-        <div class="numbers">
-          <div class="col-xs-6 col-sm-2 col-sm-offset-2">
-            <h3 class="live">{{submissionCount | number }}</h3>
-            <h4>Transactions</h4>
-          </div>
-          <div class="col-xs-6 col-sm-2">
-            <h3 class="live">{{productPublicCount}}</h3>
-            <h4>Technologies</h4>
-          </div>
-          <div class="col-xs-6 col-sm-2">
-            <h3 class="live">{{productConnectedCount}}</h3>
-            <h4>Connected Apps</h4>
-          </div>
-          <div class="col-xs-6 col-sm-2">
-            <h3 class="live">{{orgCount}}</h3>
-            <h4>Organizations</h4>
-          </div>
-        </div>
-    </header>
-
-  <!-- Page Content -->
-  <br>
-  <br>
-  <br>
-
+    <div class="banner-headline">
+      <div class="col-xs-12">
+        find and integrate leading technologies
+        <br>
+        to amplify your impact with open[Fn]
+      </div>
+    </div>
+    <!-- <div class="logo"></div>    -->
+    <div class="numbers">
+      <div class="col-xs-2 col-sm-offset-2">
+        <h3 class="live">{{submissionCount | number }}</h3>
+        <h4>Transactions</h4>
+      </div>
+      <div class="col-xs-2">
+        <h3 class="live">{{productPublicCount}}</h3>
+        <h4>Technologies</h4>
+      </div>
+      <div class="col-xs-2">
+        <h3 class="live">{{productConnectedCount}}</h3>
+        <h4>Connected Apps</h4>
+      </div>
+      <div class="col-xs-2">
+        <h3 class="live">{{orgCount}}</h3>
+        <h4>Organizations</h4>
+      </div>
+    </div>
+    </div>
+  </header>
   <div class="featurette" id="marketplace">
     <div class="container">
       <a href="/marketplace">
