Added ng-click logic to clear filters

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -90,11 +90,10 @@
 <!--             <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-open">
               <i class="fa fa-question-circle"></i> Help.
             </label> -->
-            <button style="fload: right;" class="btn integrated-btn">Clear Filters</button>
+            <button style="float: right;" class="btn integrated-btn" ng-click="removeTagFilters()">Clear Filters</button>
             <label style="float: right;" class="btn btn-open integrated-btn" tooltip-trigger="mouseenter" tooltip-placement="bottom" tooltip="Click here to show only connected apps." ng-model="searchFilters.integrated" btn-checkbox>
                 Integrated
             </label>
-            <button style="float:right;" class="btn btn-integrated-btn">Clear Filters</button>
           </div>
         </div>
         <br>
