--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -3,9 +3,9 @@
     <div id="particles-js"></div>
     <div class="banner-headline">
       <div class="col-xs-12">
-        find and integrate leading technologies
+        <strong>find</strong> and <strong>integrate</strong> critical technologies
         <br>
-        to amplify your impact with open[Fn]
+        to amplify your impact with <strong>open[Fn]</strong>
       </div>
     </div>
     <!-- <div class="logo"></div>    -->
