--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -8,10 +8,12 @@
       </h3>
     </div>
 </header>
+<br>
+<div ng-controller="MarketplaceController as marketplace">
+ <div class="container-fluid">
 
-  <div class="featurette dark">
-    <div class="container">
-      <div ng-controller="MarketplaceController as marketplace" class="row">          
+  <div class="col-sm-12 featurette dark">
+         
         <div class="col-md-10 col-md-offset-1">
           <div class="search-field">
               <input type:"text" class="form-control" class="form-control" placeholder="Start typing to search..." ng-model="searchText" tooltip-trigger="focus" tooltip="Search for product names, descriptions, tags, or websites.">
@@ -19,40 +21,34 @@
         </div>
         <div class="col-md-10 col-md-offset-1">  
           <div class="new-product-link">
-            <label style="float: left;" class="btn btn-open push-down" data-toggle="modal" data-target="#add_modal">
+            <label style="float: left;" class="btn integrated-btn" data-toggle="modal" data-target="#add_modal">
               <i class="fa fa-plus"></i> Add your product
             </label>
-<!--             <label style="margin-left: 1em;" data-toggle="modal" data-target="#help_modal" class="btn btn-open">
-              <i class="fa fa-question-circle"></i> Help.
-            </label> -->
-            <label style="float: right;" class="btn btn-open" tooltip-trigger="mouseenter" tooltip-placement="bottom" tooltip="Click here to show only connected apps." ng-model="searchFilters.integrated" btn-checkbox>
+            <label style="float: right;" class="btn integrated-btn" ng-click="removeTagFilters()">Clear Filters</label>
+            <label style="float: right;" class="btn integrated-btn" tooltip-trigger="mouseenter" tooltip-placement="bottom" tooltip="Click here to show only connected apps." ng-model="searchFilters.integrated" btn-checkbox>
                 Integrated
             </label>
+
           </div>
         </div>
         <br>
         <div class="row">
-          <div class="col-md-12 btn-group btn-group-justified" role="group" aria-label="...">
-            <div class="btn-group" role="group" ng-repeat="category in categories">
-              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              {{category.name}}
-               <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                <li ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"><a href="#">{{tag.name}} <span class="badge">{{tag.tag_count}}</span></a></li>
-              </ul>
-            </div>
-          </div>
         </div>
         <br>
-        <div class="product-list row" ng-if="isLoading">
-          <div class="col-xs-12 center">
-          <br><br><br><br><br>
-            <i class="fa fa-refresh fa-3x fa-spin"></i>
-          </div>
-        </div>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
+          <div class="col-sm-2 featurette dark tagcat" id="custom-accord">
+            <accordion close-others="false">
+              <accordion-group heading="{{category.name}}" is-open="true" ng-repeat="category in categories">
+                <li class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox>{{tag.name}} <span class="badge">{{tag.tag_count}}</span></li>
+              </accordion-group>
+            </accordion>
+          </div>
+          <div class="col-xs-10 center" ng-if="isLoading">
+          <br><br><br>
+            <i class="fa fa-refresh fa-3x fa-spin"></i>
+          </div>
+          <div class="col-sm-10">
           <div ng-repeat="product in products | filter:filterProducts">
             <div class="product-container col-lg-4 col-md-6 col-sm-6 col-xs-12">
               <div ng-class="product.integrated ? 'product integrated' : 'product'" tooltip-trigger="mouseenter" tooltip="Click to learn about {{product.name}}." ng-click="go('/product/' + product.id)" style="cursor: default">
@@ -98,47 +94,6 @@
                 <a ng-click="changeVoteFor(product); $event.stopPropagation()" class="vote-link" ng-show="!product.integrated" tooltip-trigger="mouseenter" tooltip="Vote up if you want to connect {{product.name}}.">               
                   <i ng-class="{'fa ' : true, 'fa-chevron-down' : product.hasVoteForUser, 'fa-chevron-up' : !product.hasVoteForUser}"></i>
                 </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal fade" id="add_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="featurette dark">
-                <div class="modal-header center">Coming Soon!
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal fade" id="help_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="featurette dark">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">How to use the marketplace.</h4>
-                </div>
-                <div class="modal-body">          
-                  <span class="mb-title">Search</span> for technologies by typing anything you want: the job you want to perform, features you know you'll need, the name of the tool or even the device you need to run it on. We'll scan all of the text associated with each technology and return those results that match.
-                  <br>
-                  <br>
-                  <span class="mb-title">Click</span> on a technology to learn about it. Each day we're adding more, including features, tech specs, pricing, reviews, and a list of useful resources including case-studies from open[Fn]content.
-                  <br>
-                  <br>
-                  From the marketplace tile, or a technology's detail page you can:
-                  <br>
-                  <br>
-                  <ul>
-                    <li>Visit an app's <strong>homepage</strong> by clicking the <i class="fa fa-external-link"></i> icon,</li><br>
-                    <li>Setup your <strong>credentials</strong> if the app is already integrated by clicking the <i class="fa fa-plug"></i> icon,</li><br>
-                    <li>See how many votes the app has received <strong>for integration</strong> by checking the <i class="fa fa-plug"></i>+<span class="live"> N</span> indicator,</li><br>
-                    <li>And <strong>vote</strong> for the app if you'd like to see it integrated by clicking the <i class="fa fa-chevron-up"></i> icon.</li>
-                  </ul>
-                  <br>
-                  We'll prioritize the <span class="mb-title">integration</span> of new technologies according to your votes.
-                </div>
               </div>
             </div>
           </div>
