--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -16,12 +16,12 @@
          
         <div class="col-md-10 col-md-offset-1">
           <div class="search-field">
-              <input type:"text" class="form-control" class="form-control" placeholder="Start typing to search..." ng-model="searchText" tooltip-trigger="focus" tooltip="Search for product names, descriptions, tags, or websites.">
+              <input type:"text" class="form-control" ng-class="alex" placeholder="Start typing to search..." ng-model="searchText" tooltip-trigger="mouseenter" tooltip="Search for product names, descriptions, tags, or websites.">
           </div>
         </div>
         <div class="col-md-10 col-md-offset-1">  
           <div class="new-product-link">
-            <label style="float: left;" class="btn integrated-btn" data-toggle="modal" data-target="#add_modal">
+            <label style="float: left;" class="btn integrated-btn" disabled="disabled">
               <i class="fa fa-plus"></i> Add your product
             </label>
             <label style="float: right;" class="btn integrated-btn" ng-click="removeTagFilters()">Clear Filters</label>
@@ -37,10 +37,13 @@
         <br>
         <div class="product-list row" ontouchstart="this.classList.toggle('hover');">
           <br>
-          <div class="col-sm-2 featurette dark tagcat" id="custom-accord">
-            <accordion close-others="false">
+          <div class="col-sm-2 featurette dark" id="custom-accord">
+            <accordion close-others="false"tooltip-trigger="mouseenter" tooltip="Filter the marketplace by tag. Add multiple tags to narrow your search even more.">
+              <accordion-group heading="Tags" is-open="true">
+                <div style="cursor: pointer" ng-click="go('/tags/')">Collapse tag categories if you don't need them by clicking on the title. See frequencies in the badge. Click here to browse and search all of the tags in the system. <span class="badge"><i class="fa fa-search"></i></span></div>
+              </accordion-group>
               <accordion-group heading="{{category.name}}" is-open="true" ng-repeat="category in categories">
-                <li class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox>{{tag.name}} <span class="badge">{{tag.tag_count}}</span></li>
+                <li style="cursor: pointer" class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox>{{tag.name}} <span class="badge">{{tag.tag_count}}</span></li>
               </accordion-group>
             </accordion>
           </div>
