--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -42,7 +42,7 @@
               <accordion-group heading="Tags" is-open="true">
                 <div style="cursor: pointer" ng-click="go('/tags/')">Collapse tag categories if you don't need them by clicking on the title. See frequencies in the badge. Click here to browse and search all of the tags in the system. <span class="badge"><i class="fa fa-search"></i></span></div>
               </accordion-group>
-              <accordion-group heading="{{category.name}}" is-open="true" ng-repeat="category in categories">
+              <accordion-group heading="{{category.name}}"  ng-repeat="category in categories">
                 <li style="cursor: pointer" class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox>{{tag.name}} <span class="badge">{{tag.tag_count}}</span></li>
               </accordion-group>
             </accordion>
