bring tag splice

--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -10,7 +10,7 @@
 </header>
 <br>
 <div ng-controller="MarketplaceController as marketplace">
- <div class="container-fluid">
+ <div class="container">
 
   <div class="col-sm-12 featurette dark">
          
