--- a/public/the_bridge_templates/static/developers.html
+++ b/public/the_bridge_templates/static/developers.html
@@ -99,7 +99,7 @@
               <i class="fa fa-check fa-lg" style="color: #5cb85c;"></i>
             </li>
             <li>
-              This part is fairly self explanatory ;-)
+              This part is fairly self explanatory<br>;-)
             </li>
         </ul>
       </div>
