--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -3,12 +3,14 @@
     <div id="particles-js"></div>
     <div class="banner-headline">
       <div class="col-xs-12">
-        <strong>find</strong> and <strong>integrate</strong> critical technologies
-        <br>
-        to amplify your impact with <strong>open[Fn]</strong>
+        Technology isn't the answer,<br>
+        but it shouldn't be the problem.
       </div>
     </div>
-    <!-- <div class="logo"></div>    -->
+    <div class="center who">
+      <strong>discover</strong> and <strong>integrate</strong> critical technologies
+      <br>to amplify your impact with <strong>open[Fn]</strong>
+    </div>
     <div class="numbers">
       <div class="col-xs-2 col-sm-offset-2">
         <h3 class="live">{{submissionCount | number }}</h3>
@@ -33,10 +35,6 @@
     <div class="container">
       <a href="/marketplace">
         <div class="row">
-          <!-- <div class="col-md-5 col-md-offset-1 col-md-push-6"> -->
-            <!-- <div class="openmarket-featurette-image center-block"> -->
-            <!-- </div> -->
-          <!-- </div> -->
           <div class="col-md-8">
             <h2 class="featurette-heading">
               open<strong>Marketplace</strong> helps you find the tools you need.
@@ -59,10 +57,6 @@
     <div class="container">
       <a href="/mappings" ng-click="$event.stopPropagation()">
         <div class="row">
-          <!-- <div class="col-md-5"> -->
-            <!-- <div class="openintegrations-featurette-image center-block"> -->
-            <!-- </div> -->
-          <!-- </div> -->
           <div class="col-md-8 col-md-push-4 text-right">
             <h2 class="featurette-heading">
               open<strong>Integrations</strong> make<br/> apps more powerful.
@@ -83,10 +77,6 @@
     <div class="container">
       <a href="/release-notes">
         <div class="row">
-          <!-- <div class="col-md-5 col-md-offset-1 col-md-push-6"> -->
-            <!-- <div class="openideas-featurette-image center-block"> -->
-            <!-- </div> -->
-          <!-- </div> -->
           <div class="col-md-8">
             <h2 class="featurette-heading">
               open<strong>Content</strong> makes it easier<br/> to lead successful implementations.
@@ -127,4 +117,4 @@
   </div>
   </div>
 
-  <script type="text/javascript">particlesJS("particles-js",{particles:{number:{value:90,density:{enable:!0,value_area:800}},color:{value:"#ffffff"},shape:{type:"circle",stroke:{width:0,color:"#000000"},polygon:{nb_sides:5},image:{src:"img/github.svg",width:100,height:100}},opacity:{value:.5,random:!1,anim:{enable:!1,speed:1,opacity_min:.1,sync:!1}},size:{value:3,random:!0,anim:{enable:!1,speed:40,size_min:.1,sync:!1}},line_linked:{enable:!0,distance:150,color:"#ffffff",opacity:.4,width:1},move:{enable:!0,speed:6,direction:"none",random:!1,straight:!1,out_mode:"out",attract:{enable:!1,rotateX:600,rotateY:1200}}},interactivity:{detect_on:"canvas",events:{onhover:{enable:!0,mode:"grab"},onclick:{enable:!0,mode:"push"},resize:!0},modes:{grab:{distance:130,line_linked:{opacity:1}},push:{particles_nb:4}}},retina_detect:!0,config_demo:{hide_card:!1,background_color:"#b61924",background_image:"",background_position:"50% 50%",background_repeat:"no-repeat",background_size:"cover"}});</script>
+<script type="text/javascript">particlesJS("particles-js",{particles:{number:{value:90,density:{enable:!0,value_area:800}},color:{value:"#ffffff"},shape:{type:"circle",stroke:{width:0,color:"#000000"},polygon:{nb_sides:5},image:{src:"img/github.svg",width:100,height:100}},opacity:{value:.5,random:!1,anim:{enable:!1,speed:1,opacity_min:.1,sync:!1}},size:{value:3,random:!0,anim:{enable:!1,speed:40,size_min:.1,sync:!1}},line_linked:{enable:!0,distance:150,color:"#ffffff",opacity:.4,width:1},move:{enable:!0,speed:6,direction:"none",random:!1,straight:!1,out_mode:"out",attract:{enable:!1,rotateX:600,rotateY:1200}}},interactivity:{detect_on:"canvas",events:{onhover:{enable:!0,mode:"grab"},onclick:{enable:!0,mode:"push"},resize:!0},modes:{grab:{distance:130,line_linked:{opacity:1}},push:{particles_nb:4}}},retina_detect:!0,config_demo:{hide_card:!1,background_color:"#b61924",background_image:"",background_position:"50% 50%",background_repeat:"no-repeat",background_size:"cover"}});</script>
