stars in background

--- a/public/the_bridge_templates/static/welcome.html
+++ b/public/the_bridge_templates/static/welcome.html
@@ -7,10 +7,6 @@
         but it shouldn't be the problem.
       </div>
     </div>
-    <div class="center who">
-      <strong>discover</strong> and <strong>integrate</strong> critical technologies
-      <br>to amplify your impact with <strong>open[Fn]</strong>
-    </div>
     <div class="numbers">
       <div class="col-xs-2 col-sm-offset-2">
         <h3 class="live">{{submissionCount | number }}</h3>
@@ -28,7 +24,9 @@
         <h3 class="live">{{orgCount}}</h3>
         <h4>Organizations</h4>
       </div>
-    </div>
+      <div class="col-xs-12 who">
+        << discover and integrate critical technologies to amplify your impact with open[Fn] >>
+      </div>
     </div>
   </header>
   <div class="featurette" id="marketplace">
