--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -1,3 +1,13 @@
+<style>
+
+  .better-button-able {
+}
+
+  .better-button-disabled {
+    background: #D0D0D0;
+    pointer-events: none;
+}
+</style>
 <header class="header-image">
     <div class="headline">
       <h1>
@@ -48,7 +58,7 @@
                 <accordion-heading>
                   {{category.name}} <i class="pull-right fa fa-caret-down"></i>
                 </accordion-heading>
-                <li style="cursor: pointer" class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-tag_count'" ng-init="taggings_count(tag)" ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox>{{tag.name}} <span class="badge">{{tag.tag_count}}</span></li>
+                <li style="cursor: pointer" class="list-group-item" ng-repeat="tag in tags | filter:{tag_category_id: category.id }  | orderBy: '-taggings_count'"  ng-click="tagFilter(tag)"  ng-model="tag.active" btn-checkbox ng-class="(((tag.taggings_count == 0)&&(!tag.active))||(isLoading)) ? 'better-button-disabled' : 'better-button-able'">{{tag.name}}<span class="badge">{{tag.taggings_count}}</span></li>
               </accordion-group>
             </accordion>
           </div>
