--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -12,13 +12,16 @@
 </header>
 <br>
 <div class="row" ng-repeat="member in team">
-  <div class="col-md-4 col-md-offset-2">
-  Image
+  <div class="col-md-2 col-md-offset-2">
+  <img ng-src="{{member.picture_url}}">
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <p><b>{{member.name}}</b></p>
     <br>
     <p>{{member.bio}}</p>
+    <br>
+  </div>
+  <div class="divider"></div>
 </div>
 
 </div>
