using photos from github

--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -35,8 +35,8 @@
 
   <header class="header-image">
     <div class="headline our-team">
-      <h1>
-        Our team
+      <h1><strong>
+        Our team</strong>
       </h1>
     </div>
   </header>
