moved styling to base.css

--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -1,42 +1,3 @@
-<head>
-  <style type="text/css">
-  .our-team h1 {
-    font-size: 60px;
-    text-align: center;
-  }
-
-  .our-team h2 h3 {
-    display: inline-block;
-  }
-  
-  .line-separator {
-    height:1px;
-    margin: auto 25px 10px 0; 
-    background:#717171;
-    border-bottom:1px solid #7FB7BE;
-  }
-
-  .team-member-pic {
-    width: 100%;
-    max-width: 250px;
-    height: auto;
-    margin-top: 26px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-  }
-
-  .team-member-page {
-    min-height: 250px;
-  }
-
-  .team-member-page p {
-    margin: 0 0 0 10px;
-    line-height: 1.8;
-  }
-  </style>
-
-</head>
-
 <div class="team" ng-controller="TeamController as team">
 
   <header class="header-image">
@@ -46,7 +7,8 @@
   </header>
     <div class="container col-md-8 col-md-offset-2 team-member-page">
     <br> <br>
-    <p> Occupy narwhal Schlitz, lo-fi sed iPhone yr put a bird on it pork belly nostrud. Velit Etsy try-hard, Echo Park non selvage mustache do shabby chic. Fanny pack culpa jean shorts eu butcher. Aesthetic mustache adipisicing, 90's YOLO aliqua pariatur Helvetica Etsy lo-fi photo booth Pinterest irony dolor High Life. Tempor photo booth consectetur butcher, fingerstache accusamus jean shorts culpa cray before they sold out duis anim. Art party tempor synth church-key cred YOLO typewriter, Neutra Banksy deserunt polaroid irony et tousled. Gentrify twee officia, cray tempor nisi small batch retro sartorial cliche voluptate fap sriracha quinoa.</p>
+<!--     TODO: Write an about us section -->
+    <p> This is where the about us text will go. PLEASE INSERT TEXT</p>
     <h1>Our Team</h1>
   <div class="row team-member-page" ng-repeat="member in team | orderBy:'order'">
 
