twitter and styling our_team

--- a/public/the_bridge_templates/team/our_team.html
+++ b/public/the_bridge_templates/team/our_team.html
@@ -2,7 +2,12 @@
 
   <header class="header-image">
     <div class="headline our-team">
-      <h1><strong>About Us</strong></h1>
+          <h1>
+      <i class="fa fa-credit-card"></i> tiered <strong>Pricing</strong>
+    </h1>
+    <h3>
+      Unlock the <strong>potential</strong> of your current technologies.
+    </h3>
     </div>
   </header>
     <div class="container col-md-8 col-md-offset-2 team-member-page">
@@ -17,7 +22,7 @@
         <img ng-src="{{member.picture_url}}" class = "team-member-pic" width=190px>
       </div>
       <div class="col-md-9">
-        <h2><b>{{member.name}}</b> &nbsp&nbsp&nbsp <small>{{member.title}}</small></h2>
+        <h2><b>{{member.name}}</b><small>&nbsp&nbsp{{member.title}}</small></h2>
         <h3></h3>
         <p>{{member.bio}}</p>
         <br>
